# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# DEPRECATED - Replacement: "fx set <board> --product terminal"

monolith = [ "topaz/packages/products/term" ]

preinstall = []

available = []
