# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

group("tests") {
  testonly = true

  deps = [
    # "keyboard:keyboard_tests",
    "mondrian_story_shell:mondrian_story_shell_tests",
  ]
}
