# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("common") {
  deps = [
    "//apps/modules/common/color",
    "//apps/modules/common/email",
    "//apps/modules/common/image_picker/image_picker",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//apps/modules/common/packages/fixtures/test",
    "//apps/modules/common/packages/models/test",
    "//apps/modules/common/packages/util/test",
    "//apps/modules/common/packages/widgets/test",
  ]
}
