# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

declare_args() {
  # Provide a path for the config.json for the modules. This path will be
  # interpretted as relative to this package's directory unless it starts with
  # a "//" in which case it will be considered relative to the Fuchsia source
  # directory. If the path starts with a single slash it will be treated as an
  # absolute path
  modules_override_config = "config.json"
}

assert(modules_override_config != "")

package("modules") {
  app = true

  deps = [
    "//apps/modules/common/agents",
    "//apps/modules/common/modules",
  ]

  binaries = [
    {
      source = "gen/apps/modules/common/modules/chess/chess.flx"
      name = "chess"
    },

    {
      source = "gen/apps/modules/common/modules/color/color.flx"
      name = "color"
    },

    {
      source = "gen/apps/modules/common/modules/image/image.flx"
      name = "image"
    },

    {
      source = "gen/apps/modules/common/modules/hotel_confirmation/hotel_confirmation.flx"
      name = "hotel_confirmation"
    },

    {
      source = "gen/apps/modules/common/modules/interactive_receipt/interactive_receipt.flx"
      name = "interactive_receipt"
    },

    {
      source = "gen/apps/modules/common/modules/link_viewer/link_viewer.flx"
      name = "link_viewer"
    },

    {
      source = "gen/apps/modules/common/modules/location_details/location_details.flx"
      name = "location_details"
    },

    {
      source = "gen/apps/modules/common/modules/map/map.flx"
      name = "map"
    },

    {
      source = "gen/apps/modules/common/modules/weather_forecast/weather_forecast.flx"
      name = "weather_forecast"
    },

    {
      source = "weather_agent.dartx"
      name = "weather_agent"
    },

    {
      source = "location_agent.dartx"
      name = "location_agent"
    },

    {
      source = "gen/apps/modules/common/modules/travel_info/travel_info.flx"
      name = "travel_info"
    },

    {
      source = "gen/apps/modules/common/modules/usps/usps.flx"
      name = "usps"
    },

    {
      source = "gen/apps/modules/common/modules/youtube_related_videos/youtube_related_videos.flx"
      name = "youtube_related_videos"
    },

    {
      source = "gen/apps/modules/common/modules/youtube_story/youtube_story.flx"
      name = "youtube_story"
    },

    {
      source = "gen/apps/modules/common/modules/youtube_thumbnail/youtube_thumbnail.flx"
      name = "youtube_thumbnail"
    },

    {
      source = "gen/apps/modules/common/modules/youtube_video/youtube_video.flx"
      name = "youtube_video"
    },
  ]

  resources = [ {
        path = rebase_path(modules_override_config)
        dest = "modules/config.json"
      } ]
}

package("modules_tests") {
  testonly = true

  deps = [
    "//apps/modules/common/packages/fixtures:test",
    "//apps/modules/common/packages/models:test",
    "//apps/modules/common/packages/util:test",
    "//apps/modules/common/packages/widgets:test",
  ]
}
