# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("chat") {
  app = true
  system_image = true

  deps = [
    "agents",
    "modules",
    "services",
  ]

  binaries = [
    {
      name = "chat_conversation"
      source = "gen/topaz/app/chat/modules/conversation/chat_conversation.flx"
    },

    {
      name = "chat_conversation_list"
      source = "gen/topaz/app/chat/modules/conversation_list/chat_conversation_list.flx"
    },
  ]
}

package("chat_tests") {
  testonly = true
  app = true
  system_image = true

  deps = [
    "tests/chat_content_provider_test",
  ]

  resources = [ {
        path = rebase_path("tests/chat_tests.json")
        dest = "apps/chat_tests/chat_tests.json"
      } ]
}

group("tests") {
  testonly = true

  deps = [
    "modules/conversation:test",
    "modules/conversation_list:test",
  ]
}
