# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("chat_tests") {
  testonly = true
  deprecated_system_image = true

  deps = [
    "tests/chat_content_provider_test",
  ]

  resources = [
    {
      path = rebase_path("tests/chat_tests.json")
      dest = "apps/chat_tests/chat_tests.json"
    },
  ]
}

group("tests") {
  testonly = true

  deps = [
    "modules/conversation:test",
    "modules/conversation_info:test",
    "modules/conversation_list:test",
  ]
}
