# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/flutter/build/flutter_app.gni")
import("//build/package.gni")

flutter_app("color_app") {
  main_dart = "lib/main.dart"
  output_name = "color"
  source_dir = "lib"

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
  ]
}


package("color") {
  app = true
  system_image = true

  deps = [
    ":color_app",
  ]

  binaries = [ {
        name = "color"
      } ]
}
