# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//peridot/build/module_repository/manifest_package.gni")

group("tests") {
  testonly = true

  deps = [
    "agents/content_provider:test",
    "modules/contact_list:test",
    "modules/contacts_picker:test",
  ]
}

module_manifest_package("contacts_picker_manifest") {
  sources = [
    "modules/contacts_picker/manifest.json",
  ]
}
