# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("tests") {
  testonly = true

  deps = [
    "agents/content_provider:contacts_content_provider_tests",
    "modules/contact_list:contact_list_tests",
    "modules/contacts_picker:contacts_picker_tests",
  ]
}
