# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_test.gni")
import("//build/package.gni")
import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("dashboard") {
  package_name = "dashboard"
  flx = false

  main_dart = "lib/main.dart"
  source_dir = "lib"

  sandbox = "meta/sandbox"

  deps = [
    "//peridot/public/lib/module/fidl:fidl_dart",
    "//peridot/public/lib/user/fidl:fidl_dart",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/buildbucket",
    "//third_party/dart-pkg/pub/html",
    "//third_party/dart-pkg/pub/http",
    "//topaz/app/chat/services:services_dart",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/fidl/dart",
    "//topaz/public/lib/ui/flutter",
    "//topaz/runtime/web_runner/lib/dart:web_view",
  ]
}

dart_test("dashboard_test") {
  deps = [
    ":dashboard_dart_library",
    "//third_party/dart-pkg/pub/buildbucket",
    "//third_party/dart-pkg/pub/mockito",
    "//third_party/dart-pkg/pub/test",
  ]
}

group("tests") {
  testonly = true

  deps = [
    ":dashboard_test",
  ]
}
