# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_test.gni")
import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("dashboard") {
  package_name = "dashboard"
  main_dart = "lib/main.dart"

  sources = [
    "buildbucket/build_bucket_service.dart",
    "service/build_info.dart",
    "service/build_service.dart",
    "build_status_model.dart",
    "build_status_widget.dart",
    "chatter.dart",
    "dashboard_app.dart",
    "dashboard_module_model.dart",
    "enums.dart",
    "info_text.dart",
  ]

  sandbox = "meta/sandbox"

  deps = [
    "//peridot/public/lib/module/fidl:fidl_dart",
    "//peridot/public/lib/user/fidl:fidl_dart",
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/buildbucket",
    "//third_party/dart-pkg/pub/html",
    "//third_party/dart-pkg/pub/http",
    "//topaz/app/chat/services:services_dart",
    "//topaz/public/dart/logging:lib.logging",
    "//topaz/public/dart/widgets:lib.widgets",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/fidl/dart",
    "//topaz/public/lib/ui/flutter",
    "//topaz/runtime/web_runner/lib/dart:web_view",
  ]
}

dart_test("dashboard_test") {
  sources = [
    "build_bucket_service_test.dart",
    "enums_test.dart",
  ]

  deps = [
    ":dashboard_dart_library",
    "//third_party/dart-pkg/pub/buildbucket",
    "//third_party/dart-pkg/pub/mockito",
    "//third_party/dart-pkg/pub/test",
  ]
}

group("tests") {
  testonly = true

  deps = [
    ":dashboard_test",
  ]
}
