# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("documents") {
  app = true
  system_image = true

  deps = [
    "//topaz/app/documents/agents",
    "//topaz/app/documents/modules/browser",
    "//topaz/app/documents/modules/info",
    "//topaz/app/documents/services",
  ]

  binaries = [
    {
      name = "documents/browser"
      source = "gen/topaz/app/documents/modules/browser/browser.flx"
    },
    {
      name = "documents/info"
      source = "gen/topaz/app/documents/modules/info/info.flx"
    },
    {
      # This is what shows up in file:///system/apps/documents/content_provider
      # and points to the documents_content_provider.dartx, which is defined at
      # agents/BUILD.gn
      # When running connectToAgent() we should pass in this name
      name = "documents/content_provider"
      source = "documents_content_provider.dartx"
    },
  ]
}
