# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/flutter/build/flutter_app.gni")
import("//packages/package.gni")

flutter_app("file_explorer_app") {
  main_dart = "lib/main.dart"
  output_name = "file_explorer"

  manifest = "pubspec.yaml"

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
  ]
}

package("file_explorer") {
  app = true
  system_image = true

  deps = [
    ":file_explorer_app",
  ]

  binaries = [ {
        name = "file_explorer"
      } ]
}
