# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("file_explorer") {
  main_dart = "lib/main.dart"

  sandbox = "meta/sandbox"


  sources = [
    "folder_widget.dart",
  ]

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
  ]
}
