# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/flutter_runner/flutter_app.gni")

flutter_app("image") {
  main_dart = "lib/main.dart"

  module_manifest = "manifest.json"

  meta = [
    {
      path = rebase_path("meta/image.cmx")
      dest = "image.cmx"
    },
  ]

  sources = [
    "src/models/image_model.dart",
  ]

  deps = [
    "//third_party/dart-pkg/git/flutter/packages/flutter",
    "//topaz/public/lib/app_driver/dart",
    "//topaz/public/lib/app/dart",
    "//topaz/public/lib/widgets/dart",
  ]
}
